<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/my_gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewAvatar"
            android:layout_width="25dp"
            android:layout_height="175dp"
            android:layout_weight="1"
            android:src="@drawable/luffy" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/firstname"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <TextView
                    android:id="@+id/textViewPhone"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/sym_action_email" />

                <TextView
                    android:id="@+id/textViewEmail"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/img" />

                <TextView
                    android:id="@+id/textViewAddress"
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/address" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/textViewExperience"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_exp"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewExperiences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:listitem="@layout/item_experience" />

    <TextView
        android:id="@+id/textViewFormation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_form"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listViewFormation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        tools:listitem="@layout/item_formation"
        />

    <Button
        android:id="@+id/buttonCompetence"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/color_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_comp"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textColor="@color/white"/>


</LinearLayout>